--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "start": "next start",
     "compile-sass": "node-sass src/assets/scss/style.scss src/assets/css/style.css --output-style compressed -w"
   },
   "dependencies": {
